# experiments

./: .editorconfig  .example.env  .gitignore  .gitmodules  .prettierignore  Intl.d.ts  README.md  deploy.cjs  deploy.js  json_schema.json  next.config.js  package.json  pnpm-lock.yaml  privacy.md  rollouts.json  run.sh  sentry.client.config.js  sentry.properties  sentry.server.config.js  tsconfig.json  types.d.ts
docs/: readme.md
heimdall/: Cargo.toml  README.md  fingerprints.txt  meta.json
heimdall/src/: assignments.rs  database.rs  discord.rs  env.rs  main.rs  metadata.rs  rollouts.rs  sentry.rs
himinsbjörg/: README.md  main.py  requirements.txt
public/: api.yml
public/.well-known/: dnt-policy.txt  security.txt
src/: experiment.ts  index.ts  instrument.ts  load.ts  middleware.ts  render.ts  util.ts
src/autocomplete/: check.ts  view.ts
src/commands/: check.ts  eval.ts  hash.ts  info.ts  invite.ts  list.ts  refresh.ts  shutdown.ts  view.ts
src/components/: Link.tsx  NavigationProgress.tsx  Snowflakes.tsx
src/events/: guildCreate.ts  interactionCreate.ts  messageCreate.ts  ready.ts
src/hooks/: useRandomInterval.ts  useToast.ts
src/lib/: errors.ts  util.ts
src/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  _error.js  dashboard.tsx  get-started.tsx  index.tsx  premium.tsx  privacy.tsx  security.tsx  terms.tsx
src/providers/: PersistedStateProvider.tsx
src/stores/: CurrentUserStore.ts  GuildsStore.ts  Store.ts
src/styles/: globals.css
src/utils/: analytics.ts  database.ts  experiment.ts  http.ts  index.ts  interactions.ts  jwt.ts  types.ts  (+1 more)
(+139 files in other folders)
