[package]
name = "heimdall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
twilight-http = { path = 'twilight/twilight-http' }
twilight-model = { path = 'twilight/twilight-model' }
anyhow = "*"
futures-util = "*"
tracing-subscriber = "*"
mongodb = '2'
